--- a/src/components/toolbar/mobile/MobileToolBar.module.css
+++ b/src/components/toolbar/mobile/MobileToolBar.module.css
@@ -17,6 +17,11 @@
   margin-left: 10px;
 }
 
+.side svg {
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
 .logoText {
   font-size: 20px;
   font-weight: 700;
@@ -24,6 +29,10 @@
 
 .mobileNavigation a {
   margin-left: 20px;
+}
+
+.mobileNavigation a svg {
+  font-size: 1.3rem;
 }
 
 .sideBtnImage {
