--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@
   box-sizing: border-box;
   font-family: "Involve", sans-serif;
 }
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-track {
+  display: flex;
+}
+
+.slick-slide {
+  padding: 0 10px;
+}
