--- a/src/components/productPage/ProductPage.module.css
+++ b/src/components/productPage/ProductPage.module.css
@@ -140,3 +140,35 @@
   color: #ffffff;
   border-color: #ffffff;
 }
+
+.feedbackBlock {
+  display: flex;
+  justify-content: space-between;
+}
+
+.feedbackLeftBlock {
+  width: 20%;
+}
+
+.feedbackRightBlockContainer {
+  width: 75%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.feedbackRightBlock {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.feedbackInfo {
+  display: flex;
+  margin: 10px 0;
+}
+
+.feedbackInfo svg {
+  margin: 0 5px;
+}
