--- a/src/components/footer/desktop/DesktopFooter.module.css
+++ b/src/components/footer/desktop/DesktopFooter.module.css
@@ -18,6 +18,52 @@
   flex-direction: column;
 }
 
+.notActive {
+  background-color: #7b7b7b !important;
+}
+
+.checkboxLabel {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+.checkboxInput {
+  display: none;
+}
+
+.customCheckbox {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  display: inline-block;
+  position: relative;
+  margin-right: 10px;
+  background-color: white;
+  transition: background-color 0.3s ease;
+}
+
+.checkboxInput:checked + .customCheckbox {
+  background-color: #4caf50;
+  border-color: #4caf50;
+}
+
+.customCheckbox:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 10px;
+  height: 5px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: translate(-50%, -50%) rotate(45deg);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
 .title {
   font-size: clamp(1.5rem, 0.241rem + 1.97vw, 3.438rem);
   margin-bottom: 40px;
@@ -99,6 +145,11 @@
   border: none;
   padding: 8px 30px;
   margin-right: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.socialBtns:hover {
+  background-color: #313e3a;
 }
 
 .downNav {
